--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,4 +7,9 @@
 .custom-navbar {
     background-image: url('../images/banner.svg'); /* Update with your image path */
     background-size: cover;
+    min-height: 80px;
+}
+
+.navbar-brand img {
+    max-height: 60px; /* Set the max height for the logo */
 }
