--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,7 @@
     background-image: url('../images/banner.svg'); /* Update with your image path */
     background-size: cover;
     min-height: 150px;
+    border: 0 !important;
 }
 
 .navbar-brand img {
