--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,7 @@
     background-color: #6C63FF;
     color: #fff;
     padding: 10px;
+    border-radius: 5px;
 }
 
 /* Add this to your existing styles or create a new CSS file */
